WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294083
[Single Tab mode] Safari UI flickers when scrolling with color-extension on the bottom edge
https://bugs.webkit.org/show_bug.cgi?id=294083
Summary
[Single Tab mode] Safari UI flickers when scrolling with color-extension on t...
Wenson Hsieh
Reported
2025-06-05 12:04:07 PDT
rdar://151639773
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2025-06-05 12:32:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46377
EWS
Comment 2
2025-06-05 17:50:56 PDT
Committed
295900@main
(19d2b6dde129): <
https://commits.webkit.org/295900@main
> Reviewed commits have been landed. Closing PR #46377 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug