Source/WebCore/platform/FixedContainerEdges.cpp
@@ -43,6 +43,20 @@ bool FixedContainerEdges::hasFixedEdge(BoxSide side) const
     }), colors.at(side));
 }
 
+BoxSideSet FixedContainerEdges::fixedEdges() const
+{
+    BoxSideSet edges;
+    if (hasFixedEdge(BoxSide::Top))
+        edges.add(BoxSideFlag::Top);
+    if (hasFixedEdge(BoxSide::Left))
+        edges.add(BoxSideFlag::Left);
+    if (hasFixedEdge(BoxSide::Bottom))
+        edges.add(BoxSideFlag::Bottom);
+    if (hasFixedEdge(BoxSide::Right))
+        edges.add(BoxSideFlag::Right);
+    return edges;
+}
+
 Color FixedContainerEdges::predominantColor(BoxSide side) const
 {
     return WTF::visit(WTF::makeVisitor([&](PredominantColorType) -> Color {
