Source/WebCore/platform/FixedContainerEdges.h
@@ -58,6 +58,7 @@ public:
 
     WEBCORE_EXPORT bool hasFixedEdge(BoxSide) const;
     WEBCORE_EXPORT Color predominantColor(BoxSide) const;
+    WEBCORE_EXPORT BoxSideSet fixedEdges() const;
 
     bool operator==(const FixedContainerEdges&) const = default;
 };
