Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -4184,11 +4184,30 @@ static bool isLockdownModeWarningNeeded()
     if (UIEdgeInsetsEqualToEdgeInsets(_obscuredInsets, obscuredInsets))
         return;
 
+#if ENABLE(CONTENT_INSET_BACKGROUND_FILL)
+    auto sidesWithInsets = [](UIEdgeInsets insets) {
+        WebCore::BoxSideSet sides;
+        if (insets.top > 0)
+            sides.add(WebCore::BoxSideFlag::Top);
+        if (insets.left > 0)
+            sides.add(WebCore::BoxSideFlag::Left);
+        if (insets.bottom > 0)
+            sides.add(WebCore::BoxSideFlag::Bottom);
+        if (insets.right > 0)
+            sides.add(WebCore::BoxSideFlag::Right);
+        return sides;
+    };
+    BOOL updateFixedColorExtensionViews = sidesWithInsets(_obscuredInsets) != sidesWithInsets(obscuredInsets);
+#endif // ENABLE(CONTENT_INSET_BACKGROUND_FILL)
+
     _obscuredInsets = obscuredInsets;
 
     [self _scheduleVisibleContentRectUpdate];
 #if ENABLE(CONTENT_INSET_BACKGROUND_FILL)
-    [self _updateFixedColorExtensionViewFrames];
+    if (updateFixedColorExtensionViews)
+        [self _updateFixedColorExtensionViews];
+    else
+        [self _updateFixedColorExtensionViewFrames];
 #endif
     [_warningView setContentInset:[self _computedObscuredInsetForWarningView]];
 }
